@@ -1,3 +1,9 @@
+2013-07-17  Simon Cook  <simon.cook@embecosm.com>
+
+	* build-all.sh: Add --disable-werror and --no-disable-werror options.
+	* build-elf32.sh: Add DISABLEWERROR to configure.
+	* build-uclibc.sh: Likewise.
+
 2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
 	* build-all.sh: Don't symlink-all newlib, instead just symlink the
